buildscript {
	dependencies {classpath("org.springframework.boot:spring-boot-gradle-plugin:2.7.1")
	}
}


plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'somaMVP'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'javax.xml.bind:jaxb-api'
	implementation 'org.glassfish.jaxb:jaxb-runtime'
	implementation 'javax.activation:activation:1.1.1'
	implementation 'org.webjars:webjars-locator-core'
	implementation files('libs/grpc.jar')
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'io.grpc:grpc-netty-shaded:1.47.0'
	implementation 'io.grpc:grpc-protobuf:1.47.0'
	implementation 'io.grpc:grpc-stub:1.47.0'
	compileOnly 'org.apache.tomcat:annotations-api:6.0.53' // necessary for Java 9+
	compileOnly("org.springframework.boot:spring-boot-devtools")
	annotationProcessor 'org.projectlombok:lombok'
	implementation('net.devh:grpc-server-spring-boot-starter:2.13.1.RELEASE')
	implementation('net.devh:grpc-client-spring-boot-starter:2.13.1.RELEASE')
}
apply plugin: 'org.springframework.boot'
tasks.named('test') {
	useJUnitPlatform()
}
